fix(friends): proper display of pending requests on small screens (@fehmer)

--- a/frontend/src/styles/media-queries-brown.scss
+++ b/frontend/src/styles/media-queries-brown.scss
@@ -107,6 +107,11 @@
         display: none;
       }
     }
+    .content .pendingRequests table {
+      td:nth-child(2) {
+        display: none;
+      }
+    }
   }
 
   .pageAccountSettings [data-tab="blockedUsers"] {
